[package]
name = "dicom_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
byteorder = "1.5.0"
memmap2 = "0.9.4"
once_cell = "1.19.0"
wgpu = "0.19.3"
log = "0.4.21"
flume = "0.11.0"
env_logger = "0.11.3"
pollster = "0.3.0"
png = "0.17.13"
winit = "0.29.15"
