[package]
name = "dicom_viewer"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
byteorder = "1.5.0"
memmap2 = "0.9.4"
once_cell = "1.19.0"
wgpu = "0.19.3"
log = "0.4.21"
flume = "0.11.0"
env_logger = "0.11.3"
pollster = "0.3.0"
png = "0.17.13"
winit = "0.29.15"
cfg-if = "1.0.0"
web-sys = "0.3.69"
bytemuck = { version = "1.15", features = [ "derive" ] }
wasm-bindgen = "0.2.92"
nanorand = "0.7.0"
glam = "0.27.0"
num-traits = "0.2.18"
itertools = "0.12.1"
walkdir = "2.5.0"
nalgebra = "0.32.5"
image= "0.25.1"
jpeg2k = "0.6.6"
rayon= "1.10.0"
winit_input_helper = "0.16.0"